[package]
name = "linebreak"
version = "0.1.0"
authors = ["Takayuki Sato <sttk.xslet@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"
description = "A library for breaking a given text into lines within a specified width."
documentation = "https://docs.rs/linebreak"
readme = "README.md"
repository = "https://github.com/sttk/linebreak-rust"
license = "MIT"
keywords = ["line", "break", "wrap"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu = "1.4.0"
