[package]
name = "linebreak"
version = "0.3.1"
authors = ["Takayuki Sato <sttk.xslet@gmail.com>"]
edition = "2021"
rust-version = "1.81.0"
description = "A library for breaking a given text into lines within a specified width."
documentation = "https://docs.rs/linebreak"
readme = "README.md"
repository = "https://github.com/sttk/linebreak-rust"
license = "MIT"
keywords = ["line", "break", "wrap"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu = "1.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.53"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
]
